2021-09-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3282.c:
	  Test for bug #3282.
	* src/z80/gen.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3283.c:
	  Fix bug #3283.

2021-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc2.cc,
	  src/stm8/gen.c:
	  Fix bug #3282.

2021-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Use more Z80N-specific instructions in z80n codegen.

2021-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  doc/sdccman.lyx,
	  .version:
	  Use Z80N Core 2.0 shift instructions.

2021-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve single byte rotation.

2021-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix a peephole optimizer bug in the handling of SM83 / Z80N swap instruction, part of bug #3280.

2021-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #3279.

2021-09-08 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  ChangeLog,
	  device/lib/_memset.c,
	  device/lib/gbz80/abs.s,
	  device/lib/gbz80/atomic_flag_test_and_set.s,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/mul.s,
	  device/lib/gbz80/setjmp.s,
	  device/lib/gbz80/strlen.s,
	  device/lib/stm8/__mulsint2slong.s,
	  device/lib/stm8/_divsint.s,
	  device/lib/stm8/_modsint.s,
	  device/lib/stm8/_mulint.s,
	  device/lib/stm8/atomic_flag_test_and_set.s,
	  device/lib/stm8/memcpy.s,
	  device/lib/stm8/setjmp.s,
	  device/lib/stm8/strcmp.s,
	  device/lib/stm8/strcpy.s,
	  device/lib/stm8-large/__mulsint2slong.s,
	  device/lib/stm8-large/_divsint.s,
	  device/lib/stm8-large/_modsint.s,
	  device/lib/stm8-large/_mulint.s,
	  device/lib/stm8-large/atomic_flag_test_and_set.s,
	  device/lib/stm8-large/memcpy.s,
	  device/lib/stm8-large/setjmp.s,
	  device/lib/stm8-large/strcmp.s,
	  device/lib/stm8-large/strcpy.s,
	  doc/sdccman.lyx,
	  src/stm8/main.c,
	  src/z80/main.c,