@@ -1,3 +1,8 @@
+2021-09-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c:
+	  Optimize out some redundant temporaries early.
+
 2021-09-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-3282.c:
